Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97937

QPushButton does not emit signal released() when releasing the button outside of the button

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.3.0 Alpha
    • 6.0.4, 6.2.1
    • None
    • macOS Monterey 12.0.1, Apple Magic TrackPad 2
    • Linux/X11, macOS
    • 62b7130423047fc6eb1d51301f2f065a76e9e4a8 (qt/qtbase/dev)

      QPushButton does not emit released() signal if the button is released when the mouse pointer is outside of the button that is clicked.

      On the application attached, you can reproduce the bug by clicking the button as usual, then releasing the button when mouse pointer is outside of the button.

        For Gerrit Dashboard: QTBUG-97937
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            volkanorhan Volkan Orhan
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes